--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Elif Ayar
+subtitle: Mathematics | Actuarial Science | Data Science
 ---
 
